syntax = 'proto2';
package raft;
option cc_generic_services = true;

message HeartRequest {
	required string		local_ip = 1;		   // request side ip
    required sfixed64   version  = 2;          // last version in file
    repeated string     msg      = 3;          // client msg
    optional bool       done_msg = 4;          // write the msg of priv heart to file
};

message HeartResponse {
    required sfixed64   version    = 1;        // cur node newest version
};

message VoteResuest {
	required string		local_ip   = 1;		   // request side ip
	required sfixed64   version    = 2;        // cur node newest version
};

message VoteResponse {
    required bool vote           = 1;          // is voting
};

message NodeInfoRequest {
	required string local_ip     = 1;		   // request side ip
    repeated string ip_port      = 2;          // all node ip info
}

message NodeInfoResponse {
    repeated string ip_port      = 1;          // all node ip info
}

service RaftService {

    rpc rpc_heart(HeartRequest) returns (HeartResponse);

    rpc rpc_vote(VoteResuest) returns (VoteResponse);

    rpc rpc_node_info(NodeInfoRequest) returns (NodeInfoResponse);
};